[gd_scene load_steps=5 format=3 uid="uid://ds0axph7mjy1w"]

[ext_resource type="Theme" uid="uid://c4khty5lqan3" path="res://resources/default_ui_theme.tres" id="1_d1w1e"]
[ext_resource type="Script" path="res://bulletins/pause_menu.gd" id="2_u0ybi"]

[sub_resource type="InputEventKey" id="InputEventKey_tuntq"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_v3lsi"]
events = [SubResource("InputEventKey_tuntq")]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_d1w1e")
script = ExtResource("2_u0ybi")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16
alignment = 1

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
shortcut = SubResource("Shortcut_v3lsi")
shortcut_in_tooltip = false
text = "Resume"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
text = "Settings"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
text = "Exit"

[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
